--- a/src/components/layouts/index.less
+++ b/src/components/layouts/index.less
@@ -26,6 +26,10 @@
     line-height: 4rem;
   }
 
+  .time {
+    justify-content: right !important;
+  }
+
   .flexBox {
     width: 100%;
     padding: 1.25rem 2.5rem 0;
@@ -33,6 +37,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .h_c {
       background-color: transparent;
       color: #72e3ff;
