--- a/src/pages/ParkMonitor/index.less
+++ b/src/pages/ParkMonitor/index.less
@@ -5,7 +5,6 @@
     no-repeat;
   overflow: hidden;
   position: relative;
-
   color: #fff;
   padding: 1% 3%;
 }
@@ -39,6 +38,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
 
   .h_t {
     color: #fff;
@@ -60,6 +60,7 @@
         line-height: 35px;
         text-align: center;
         cursor: pointer;
+
         &:hover {
           border: 1px solid red;
         }
@@ -73,22 +74,22 @@
 }
 
 .videogrid_wrapper {
-  margin: 10px 0;
+  // padding: 10px 0;
 
   &.fullscreen {
     object-fit: contain;
     user-select: text;
     position: fixed !important;
     box-sizing: border-box !important;
-    min-width: 0px !important;
+    min-width: 0 !important;
     max-width: none !important;
-    min-height: 0px !important;
+    min-height: 0 !important;
     max-height: none !important;
     width: 100% !important;
     height: 100% !important;
     transform: none !important;
-    inset: 0px !important;
-    margin: 0px !important;
+    inset: 0 !important;
+    margin: 0 !important;
     background: #000 !important;
     z-index: 11;
   }
@@ -99,16 +100,6 @@
     grid-row-gap: 2px;
     width: 100%;
     height: 100%;
-
-    // .fullscreen {
-    //   position: absolute;
-    //   top: 50%;
-    //   left: 0;
-    //   width: 100%;
-    //   height: auto;
-    //   transform: translateY(-50%);
-    //   background: #000;
-    // }
 
     .player_wrapper {
       cursor: pointer;
@@ -122,11 +113,7 @@
         width: 100%;
         height: 100%;
         position: relative;
-        -webkit-user-select: none;
-        -moz-user-select: none;
         user-select: none;
-        -ms-user-select: none;
-        // display: none;
 
         video {
           width: 100%;
@@ -155,12 +142,15 @@
       > div:nth-child(1) {
         grid-area: 1 / 1 / 2 / 2;
       }
+
       > div:nth-child(2) {
         grid-area: 1 / 2 / 2 / 3;
       }
+
       > div:nth-child(3) {
         grid-area: 2 / 1 / 3 / 2;
       }
+
       > div:nth-child(4) {
         grid-area: 2 / 2 / 3 / 3;
       }
@@ -169,30 +159,39 @@
     &.videogrid_9 {
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(3, 1fr);
+
       > div:nth-child(1) {
         grid-area: 1 / 1 / 2 / 2;
       }
+
       > div:nth-child(2) {
         grid-area: 1 / 2 / 2 / 3;
       }
+
       > div:nth-child(3) {
         grid-area: 1 / 3 / 2 / 4;
       }
+
       > div:nth-child(4) {
         grid-area: 2 / 1 / 3 / 2;
       }
+
       > div:nth-child(5) {
         grid-area: 2 / 2 / 3 / 3;
       }
+
       > div:nth-child(6) {
         grid-area: 2 / 3 / 3 / 4;
       }
+
       > div:nth-child(7) {
         grid-area: 3 / 1 / 4 / 2;
       }
+
       > div:nth-child(8) {
         grid-area: 3 / 2 / 4 / 3;
       }
+
       > div:nth-child(9) {
         grid-area: 3 / 3 / 4 / 4;
       }
@@ -212,7 +211,6 @@
   .h_handle_play {
     display: flex;
     align-items: center;
-
     cursor: pointer;
   }
 }
