--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -34,10 +34,10 @@
   margin: 208px auto 24px;
   height: 38px;
   //font-family: PingFangSC;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
   font-weight: 600;
   font-size: 36px;
-  color: #ffffff;
+  color: #fff;
   letter-spacing: 0;
   text-align: center;
   line-height: 36px;
