--- a/src/pages/ParkMonitor/index.less
+++ b/src/pages/ParkMonitor/index.less
@@ -64,13 +64,14 @@
         &:hover {
           border: 1px solid red;
         }
-
-        &.active {
-          border: 1px solid red;
-        }
       }
     }
   }
+}
+
+.active {
+  border: 1px solid #315ff5;
+  background: #315ff5;
 }
 
 .videogrid_wrapper {
@@ -212,5 +213,17 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+  }
+}
+
+.vgw_player_wrapper {
+  .close {
+    display: none;
+  }
+
+  &:hover {
+    .close {
+      display: block !important;
+    }
   }
 }
